# small-brain

./: .gitignore  pyproject.toml
sb/: __init__.py  agent.py  chat_agent.py  client.py
sb/tools/: __init__.py  base.py  tool_box.py
tests/: tool_test.py
